update block